# pmsec

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: pmsec-ci.yml  pmsec-release-npm.yml  pmsec-release-pypi.yml  pmsec-release.yml
bash/: README.md  pmsec
bash/test/: test.sh
conformance/: README.md  run.py
conformance/cases/: check_npm_accepts_none.json  check_npm_missing.json  check_npm_passes_after_enable.json  enable_npm_default.json  enable_npm_force_overrides_stricter.json  enable_npm_keep_stricter.json  enable_npm_upgrade_weaker.json
node/: README.md  package.json
node/src/: cli.mjs
node/src/tools/: aube.mjs  bun.mjs  bundler.mjs  cargo.mjs  mise.mjs  npm.mjs  pnpm.mjs  uv.mjs  yarn.mjs
node/src/util/: extras.mjs  io.mjs  lines.mjs  paths.mjs  version.mjs
node/test/: cli.test.mjs
powershell/: README.md  pmsec.ps1
powershell/test/: test.ps1
python/: README.md  pyproject.toml
python/src/pmsec/: __init__.py  __main__.py  cli.py
python/src/pmsec/tools/: aube.py  bun.py  bundler.py  cargo.py  mise.py  npm.py  pnpm.py  uv.py  yarn.py
python/src/pmsec/util/: context.py  extras.py  io.py  lines.py  paths.py  version.py
python/tests/: test_cli.py
scripts/: bump.sh  check-versions.sh
