[project]
name = "pmsec"
version = "2026.6.2"
description = "Zero-config install-time supply-chain hardening for npm, pnpm, yarn, bun, cargo, mise, uv, and bundler."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "Hikaru Egashira", email = "ai@egahika.dev" }]
keywords = ["supply-chain", "cooldown", "min-release-age", "exclude-newer", "npm", "pnpm", "yarn", "bun", "cargo", "mise", "uv", "pmsec"]

[project.urls]
Homepage = "https://github.com/HikaruEgashira/pmsec"
Repository = "https://github.com/HikaruEgashira/pmsec"
Issues = "https://github.com/HikaruEgashira/pmsec/issues"

[project.scripts]
pmsec = "pmsec.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pmsec"]
